--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/index.js",
   "scripts": {
     "build": "webpack",
-    "start": "npm run build && node server/index.js",
+    "start": "npm run build && node server",
     "lint": "eslint .",
     "test": "npm run build && mocha test/.setup.js test/*.spec.js"
   },
