--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "description": "REACT100 Assignment - Change Calculator",
   "main": "server/index.js",
+  "engines": {
+    "node": "8.x.x",
+    "npm": "5.x.x"
+  },
   "scripts": {
-    "build": "webpack",
     "start": "npm run build && node server/index.js",
+    "build": "webpack",
     "lint": "eslint .",
     "test": "npm run build && mocha test/.setup.js test/*.spec.js"
   },
@@ -25,13 +29,13 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "serve-favicon": "^2.0.1",
-    "webpack": "^3.6.0"
+    "webpack": "^1.13.2"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "axios-mock-adapter": "^1.6.1",
-    "babel": "^6.3.26",
-    "babel-loader": "^7.1.1",
+    "babel": "^6.23.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-airbnb": "^1.0.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.4.3",
@@ -50,7 +54,7 @@
     "file-loader": "^0.11.2",
     "less": "^2.7.1",
     "less-plugin-autoprefix": "^1.5.1",
-    "mocha": "^3.0.2",
+    "mocha": "^3.5.3",
     "react-addons-test-utils": "^15.6.0",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
@@ -59,7 +63,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/origincodeacademy/startnow-react100-change-calculator.git"
+    "url": "git://"
   },
   "license": "MIT"
 }
