Ready to deploy

--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "npm": "5.x.x"
   },
   "scripts": {
-    "start": "npm run build && node server/index.js",
+    "dev": "webpack-dev-server",
+    "start": "webpack && node server/index.js",
     "build": "webpack",
     "lint": "eslint .",
-    "test": "mocha test/.setup.js test/*.spec.js"
+    "test": "npm run build && mocha test/.setup.js test/*.spec.js"
   },
   "dependencies": {
     "axios": "^0.16.1",
@@ -29,7 +30,8 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "serve-favicon": "^2.0.1",
-    "webpack": "^1.13.2"
+    "webpack": "^1.15.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
