--- a/package.json
+++ b/package.json
@@ -11,25 +11,23 @@
     "start": "npm run build && node server/index.js",
     "build": "webpack",
     "lint": "eslint .",
-    "test": "npm run build && mocha test/.setup.js test/*.spec.js"
+    "test": "npm run build && mocha test/.setup.js test/*.spec.js --exit"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "bluebird": "^3.5.0",
     "chai": "^3.5.0",
-    "electron": "^1.7.11",
+    "electron": "^2.0.4",
     "expect": "^1.20.2",
     "express": "^4.15.3",
     "json-loader": "^0.5.4",
-    "lodash": "^4.15.0",
+    "lodash": "^4.17.10",
     "lodash-webpack-plugin": "^0.10.2",
     "morgan": "^1.8.1",
-    "nightmare": "^2.10.0",
     "nightmare-react-utils": "^1.0.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "serve-favicon": "^2.0.1",
-    "webpack": "^3.6.0"
+    "serve-favicon": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
@@ -40,7 +38,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.4.3",
     "chai-as-promised": "^5.3.0",
-    "chai-http": "^3.0.0",
+    "chai-http": "^4.0.0",
     "css-loader": "^0.28.7",
     "csx": "^4.0.0",
     "enzyme": "^2.4.1",
@@ -52,14 +50,15 @@
     "eslint-plugin-lodash-fp": "^2.1.3",
     "eslint-plugin-react": "^6.2.0",
     "file-loader": "^0.11.2",
-    "less": "^2.7.1",
+    "less": "^3.7.1",
     "less-plugin-autoprefix": "^1.5.1",
-    "mocha": "^3.5.3",
+    "mocha": "^5.2.0",
+    "nightmare": "^3.0.1",
     "react-addons-test-utils": "^15.6.0",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.19.0",
-    "url-loader": "^0.5.9"
+    "webpack": "^3.11.0"
   },
   "repository": {
     "type": "git",
